# crasp

./: .env.example  .gitignore  README.md  index.html  mongo-init.js  package-lock.json  package.json  tailwind.config.js  temp_patch.py
scrapy_spider/: setup.py
scrapy_spider/crasp_spider/: settings.py
scrapy_spider/crasp_spider/spiders/: archive.py  run.py
scripts/: audit_corrupted_pages.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli_main.rs  commands.rs  crawler.rs  export.rs  extraction.rs  headless.rs  lib.rs  local_scrapy.rs  logging.rs  main.rs  progress.rs  runtime.rs  schema.rs  ssrf.rs  store.rs  zyte.rs
src-tauri/tests/: integration.rs
src/components/: ArchiverDashboard.tsx  ExportPanel.tsx
src/hooks/: useArchiver.ts
src/types/: archiver.ts
