[package]
name = "sitevault"
version = "0.1.0"
edition = "2021"

[lib]
name = "sitevault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate"] }
scraper = "0.22"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-util = "0.7"
futures = "0.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
